# KnowledgeAssistant

./: README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/agent/: graph_agent.py
backend/app/api/: routes.py
backend/app/connectors/: base.py
backend/app/core/: exceptions.py  logging.py
backend/app/core/domain/: entities.py
backend/app/core/interfaces/: repositories.py
backend/app/etl/: base.py  csv_excel.py  json_markdown.py  pdf_docx.py  registry.py
backend/app/graph/: cypher_validator.py
backend/app/infrastructure/auth/: jwt.py
backend/app/infrastructure/llm/: gemini.py  ollama.py
backend/app/infrastructure/neo4j/: connection.py  repository.py  schema.py
backend/app/scheduler/: jobs.py
backend/app/schemas/: api.py
backend/app/services/: person_service.py
backend/scripts/: load_excel_to_neo4j.py  seed_data.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_auth.py  test_cypher_validator.py  test_entities.py  test_student_excel_import.py
data/: master.xlsx
docs/: architecture.md  deployment.md  setup.md
frontend/: Dockerfile  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/company/: page.tsx
frontend/src/app/graph/: page.tsx
frontend/src/app/import/: page.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/lib/: api.ts  theme.tsx  utils.ts
telegram/: .env.example  Dockerfile  bot.py
(+14 files in other folders)
