[tool.poetry]
name = "eutridats"
version = "0.1.0"
description = "Personal Knowledge Graph AI Assistant"
authors = ["Eutridats Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
neo4j = "^5.26.0"
sqlmodel = "^0.0.22"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.17"
httpx = "^0.28.0"
langgraph = "^0.2.0"
openpyxl = "^3.1.5"
pandas = "^2.2.0"
python-dateutil = "^2.9.0"
pytz = "^2024.1"
pypdf = "^5.1.0"
python-docx = "^1.1.2"
markdown = "^3.7"
aiofiles = "^24.1.0"
redis = "^5.2.0"
structlog = "^24.4.0"
slowapi = "^0.1.9"
websockets = "^14.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
